[workspace]
members = [
	"bin/dnglab",
	"rawler",
	"embedftp",
	"wasm",
]
# The wasm crate targets wasm32-unknown-unknown via wasm-pack. Keep it out of
# the default set so plain `cargo build`/`cargo check` from the repo root
# continues to work for native builds.
default-members = [
	"bin/dnglab",
	"rawler",
	"embedftp",
]
resolver = "2"


[profile.bench]
opt-level = 3
overflow-checks = false
debug = 0
lto = false

[profile.release]
opt-level = 3
overflow-checks = false
debug = 0
#lto = "fat"

