[package]
name = "rawler-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for the rawler camera RAW → DNG library"
license = "LGPL-2.1"
repository = "https://github.com/dnglab/dnglab"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rawler = { path = "../rawler", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
log = "0.4"
# rawler -> uuid v4 transitively pulls getrandom 0.3; we re-declare uuid here
# with the `js` feature so it works on wasm32-unknown-unknown.
uuid = { version = "1", features = ["v4", "js"] }
# getrandom 0.3 needs the `wasm_js` backend on wasm32-unknown-unknown
# (the legacy `js` feature was renamed in 0.3).
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
